--- a/.github/workflows/dispatch-commenter.yml
+++ b/.github/workflows/dispatch-commenter.yml
@@ -1,12 +1,14 @@
 name: Dispatch Commenter
 
-on: [repository_dispatch]
+on:
+  repository_dispatch:
+    types:
+      - test-coverage-ready
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: dispatch trigger
-        if: github.event.action == "TEST_COVERAGE_READY"
         run: |
           echo "repository_dispatch triggered"
