--- a/.github/workflows/dispatch-commenter.yml
+++ b/.github/workflows/dispatch-commenter.yml
@@ -24,7 +24,7 @@ jobs:
          curl -q -o file.json https://file-examples.com/storage/fe6a71582967c9a269c25cd/2017/02/file_example_JSON_1kb.json
      - name: Build report
        run: |
-         echo "File length is `wc -l file.json` lines" > report.out
+         echo "## Files report\n\n * File \`file.json\` has `wc -l file.json | awk "{print $1}"` lines.\n\nFiles:\n\n\`\`\`\n`ls`\n\`\`\`" > report.out
      - name: Print report
        run: |
         cat report.out
@@ -33,5 +33,4 @@ jobs:
        with:
          header: test-coverage
          number: ${{ env.PR_NUMBER }}
-         message: |
-           Requested comment for commit with ${{ env.SHA }}
+         path: report.out
