--- a/.github/workflows/dispatch-commenter.yml
+++ b/.github/workflows/dispatch-commenter.yml
@@ -25,11 +25,15 @@ jobs:
       PR_NUMBER: ${{ github.event.client_payload.pr_number }}
       TARGET_BRANCH_SHA: ${{ github.event.client_payload.target_branch_sha }}
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+
       - name: Get coverage from master
         env:
           GH_TOKEN: ${{ secrets.GH_SELF_ACCESS }}
         run: |
           gh run download --name="coverage-${{ env.TARGET_BRANCH_SHA }}"
+
       - name: Print report
         run: |
           head -n 1 coverage.out
