--- a/.github/workflows/dispatch-master-coverage-uploader.yml
+++ b/.github/workflows/dispatch-master-coverage-uploader.yml
@@ -25,6 +25,11 @@ jobs:
       BUILDKITE_BUILD_NUMBER: ${{ github.event.client_payload.buildkite_build_number }}
       BUILD_SHA: ${{ github.event.client_payload.build_sha }}
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ env.BUILD_SHA }}
+
       - name: Get coverage from buildkite build
         env:
           BUILDKITE_API_TOKEN: ${{ secrets.BUILDKITE_API_TOKEN }}
