--- a/.github/workflows/dispatch-master-coverage-uploader.yml
+++ b/.github/workflows/dispatch-master-coverage-uploader.yml
@@ -25,20 +25,29 @@ jobs:
       BUILDKITE_BUILD_NUMBER: ${{ github.event.client_payload.buildkite_build_number }}
       BUILD_SHA: ${{ github.event.client_payload.build_sha }}
     steps:
-      - name: Check out repository code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Get coverage from buildkite build
         env:
           BUILDKITE_API_TOKEN: ${{ secrets.BUILDKITE_API_TOKEN }}
         run: |
           ./.github/buildkite-download-coverage-artifacts.sh ${{ env.BUILDKITE_BUILD_NUMBER }} ./buildkite-coverage 
-          ls -la
-          pwd
-          ls -la ./buildkite-coverage
 
       - name: Upload buildkite coverage artifact
         uses: actions/upload-artifact@v4
         with:
           name: buildkite-coverage-${{ env.BUILD_SHA }}
           path: buildkite-coverage/
+
+      - uses: actions/setup-go@v5
+
+      - name: Merge coverage
+        run: |
+          go install github.com/wadey/gocovmerge@b5bfa59ec0adc420475f97f89b58045c721d761c
+          gocovmerge ./buildkite-coverage/*.coverage.out > coverage.out
+
+      - name: Upload coverage artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: total-coverage-${{ env.BUILD_SHA }}
+          path: coverage.out
