change artifact name

--- a/.github/workflows/dispatch-master-coverage-uploader.yml
+++ b/.github/workflows/dispatch-master-coverage-uploader.yml
@@ -49,5 +49,5 @@ jobs:
       - name: Upload coverage artifact
         uses: actions/upload-artifact@v4
         with:
-          name: total-coverage-${{ env.BUILD_SHA }}
+          name: coverage-${{ env.BUILD_SHA }}
           path: coverage.out
