--- a/.github/workflows/dispatch-commenter.yml
+++ b/.github/workflows/dispatch-commenter.yml
@@ -27,7 +27,7 @@ jobs:
       PR_NUMBER: ${{ github.event.client_payload.pr_number }}
       BUILD_SHA: ${{ github.event.client_payload.build_sha }}
       TARGET_BRANCH_SHA: ${{ github.event.client_payload.target_branch_sha }}
-      BUILDKITE_BUILD_NUMBER: ${{ secrets.buildkite_build_number }}
+      BUILDKITE_BUILD_NUMBER: ${{ github.event.client_payload.buildkite_build_number }}
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
